charts/unifi/0.1.3/README.md
# unifi

![Version: 0.1.3](https://img.shields.io/badge/Version-0.1.3-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: 6.2.26](https://img.shields.io/badge/AppVersion-6.2.26-informational?style=flat-square)

Unifi Controller

**Homepage:** <https://www.ui.com>

## Source Code

* <https://hub.docker.com/r/linuxserver/unifi-controller>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://tvanbolderen.github.io/homelab | common | 0.3.0 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| controller.replicas | int | `1` |  |
| controller.strategy | string | `"Recreate"` |  |
| env.MEM_LIMIT | string | `"1024M"` |  |
| env.MEM_STARTUP | string | `"1024M"` |  |
| env.PGID | int | `568` |  |
| env.PUID | int | `568` |  |
| env.TZ | string | `"Etc/UTC"` |  |
| env.UMASK | int | `2` |  |
| envList | list | `[]` |  |
| fullnameOverride | string | `""` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"linuxserver/unifi-controller"` |  |
| image.tag | string | `"version-6.2.26"` |  |
| ingress.gui.certResolver | string | `"letsencrypt"` |  |
| ingress.gui.enabled | bool | `false` |  |
| ingress.gui.entryPoint | string | `"websecure"` |  |
| ingress.gui.match | string | `"Host(`test.example.com`)"` |  |
| nameOverride | string | `""` |  |
| persistence.config.accessMode | string | `"ReadWriteOnce"` |  |
| persistence.config.enabled | bool | `true` |  |
| persistence.config.mountPath | string | `"/config"` |  |
| persistence.config.size | string | `"1Gi"` |  |
| persistence.config.type | string | `"pvc"` |  |
| probes.liveness.enabled | bool | `false` |  |
| probes.liveness.path | string | `"/"` |  |
| probes.startup.enabled | bool | `false` |  |
| probes.startup.path | string | `"/"` |  |
| service.communication.enabled | bool | `true` |  |
| service.communication.ports.communication.enabled | bool | `true` |  |
| service.communication.ports.communication.port | int | `8080` |  |
| service.communication.ports.communication.protocol | string | `"TCP"` |  |
| service.communication.type | string | `"ClusterIP"` |  |
| service.discovery.enabled | bool | `true` |  |
| service.discovery.ports.discovery.enabled | bool | `true` |  |
| service.discovery.ports.discovery.port | int | `10001` |  |
| service.discovery.ports.discovery.protocol | string | `"UDP"` |  |
| service.discovery.ports.l2Discovery.enabled | bool | `false` |  |
| service.discovery.ports.l2Discovery.port | int | `1900` |  |
| service.discovery.ports.l2Discovery.protocol | string | `"UDP"` |  |
| service.discovery.type | string | `"ClusterIP"` |  |
| service.guest.enabled | bool | `false` |  |
| service.guest.ports.http.enabled | bool | `true` |  |
| service.guest.ports.http.port | int | `8880` |  |
| service.guest.ports.http.protocol | string | `"HTTP"` |  |
| service.guest.ports.https.enabled | bool | `true` |  |
| service.guest.ports.https.port | int | `8843` |  |
| service.guest.ports.https.protocol | string | `"HTTPS"` |  |
| service.guest.type | string | `"ClusterIP"` |  |
| service.gui.enabled | bool | `true` |  |
| service.gui.ports.https.enabled | bool | `true` |  |
| service.gui.ports.https.port | int | `8443` |  |
| service.gui.ports.https.primary | bool | `true` |  |
| service.gui.ports.https.protocol | string | `"HTTPS"` |  |
| service.gui.primary | bool | `true` |  |
| service.gui.type | string | `"ClusterIP"` |  |
| service.speedtest.enabled | bool | `false` |  |
| service.speedtest.ports.speedtest.enabled | bool | `true` |  |
| service.speedtest.ports.speedtest.port | int | `6789` |  |
| service.speedtest.ports.speedtest.protocol | string | `"TCP"` |  |
| service.speedtest.type | string | `"ClusterIP"` |  |
| service.stun.enabled | bool | `true` |  |
| service.stun.ports.stun.enabled | bool | `true` |  |
| service.stun.ports.stun.port | int | `3478` |  |
| service.stun.ports.stun.protocol | string | `"UDP"` |  |
| service.stun.type | string | `"ClusterIP"` |  |
| service.syslog.enabled | bool | `false` |  |
| service.syslog.ports.syslog.enabled | bool | `true` |  |
| service.syslog.ports.syslog.port | int | `5514` |  |
| service.syslog.ports.syslog.protocol | string | `"UDP"` |  |
| service.syslog.type | string | `"ClusterIP"` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
